# FifteenPuzzleGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: Пояснительная записка - Юферов.docx
src/: Application.cpp  Application.h  Board.cpp  Board.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Renderer.cpp  Renderer.h  main.cpp
